--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -28,8 +29,6 @@
                     <h3>Suggestions..</h3>
                     <ul id="suggestions-list"></ul>
                 </div>
-
-                
 
                 <div id="search-results-container" class="mt-4">
                     <h3>Search Results</h3>
