--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,8 @@ body {
 h1 {
   color: #5c67f2;
   align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
 
 .search-container {
@@ -150,4 +152,63 @@ li:hover {
 
 h2 {
   color: #5c67f2;
+}
+
+.search-results ul {
+  list-style: none;
+  padding: 0;
+}
+
+.search-results li {
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  cursor: pointer;
+  position: relative; /* Make the li a positioning context for the span */
+}
+
+.search-results li:hover .rank-results {
+  display: block; /* Show rank on hover */
+}
+
+.rank-results {
+  display: none; 
+  position: absolute;
+  right: 0; 
+  background-color: #fff;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  top: auto;  
+}
+
+.results-container {
+  margin-top: 20px;
+}
+
+
+.search-results ul {
+  list-style: none;
+  padding: 0;
+}
+
+.search-results li {
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  cursor: pointer;
+  position: relative; /* Make the li a positioning context for the spans */
+}
+
+.summary-results {
+  margin-top: 10px; /* Add margin between document ID and summary */
+}
+
+.rank-results {
+  display: none; /* Initially hide the score */
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.search-results li:hover .rank-results {
+  display: inline-block; /* Display score on hover */
 }
